--- a/Mefafon Wallet/Views/Base.lproj/Main.storyboard
+++ b/Mefafon Wallet/Views/Base.lproj/Main.storyboard
@@ -785,7 +785,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l8f-sI-LGC">
-                                                    <rect key="frame" x="13" y="11" width="42" height="21"/>
+                                                    <rect key="frame" x="13" y="11" width="184" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -801,6 +801,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="detailDescription" destination="l8f-sI-LGC" id="dpa-uZ-lSa"/>
                                             <outlet property="infoFromAPI" destination="ac0-aq-rJ1" id="B2f-8d-17G"/>
                                         </connections>
                                     </tableViewCell>
